--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,7 +1,7 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-configuration
- **/ {
+ **/{
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
@@ -36,21 +36,24 @@
     /**
      * choose the package manager for Bit to use. you can choose between 'yarn', 'pnpm'
      */
-    "packageManager": "teambit.dependencies/pnpm",
+    "packageManager": "teambit.dependencies/yarn",
     "policy": {
-      "dependencies": {},
       "peerDependencies": {
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native-web": "*",
-        "nativewind": "2.0.11",
-        "tailwindcss": "3.2.4",
         "autoprefixer": "10.4.13",
         "critters": "^0.0.16",
+        "nativewind": "2.0.11",
         "postcss": "8.4.19",
-        "typescript": "^4.8.4"
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.70.5",
+        "react-native-web": "0.18.10",
+        "tailwindcss": "3.2.4",
+        "typescript": "^4.8.4",
+        "babel-preset-expo": "9.2.2",
+        "next": "13.1.5"
       }
-    }
+    },
+    "linkCoreAspects": true
   },
   /**
    * workspace variants allow to set different subsets of configuration for components in your
@@ -62,7 +65,9 @@
   "teambit.workspace/variants": {
     "*": {
       "teambit.pkg/pkg": {
-        "packageManagerPublishArgs": ["--access public"],
+        "packageManagerPublishArgs": [
+          "--access public"
+        ],
         "packageJson": {
           "private": false,
           "name": "@react-universal/nativewind.{name}"
@@ -71,17 +76,44 @@
         //   "files": ["dist"]
         // }
       },
-      "teambit.react/react-native": {},
+      "nativewind.universal/extensions/react-native-web": {}
+    },
+    "extensions/react-native-web": {
+      "teambit.harmony/aspect": {},
       "teambit.dependencies/dependency-resolver": {
         "policy": {
-          "peerDependencies": {
+          "dependencies": {
+            "@types/react-dom": "18.0.9",
+            "@types/react-native": "0.69.5",
+            "@types/react": "18.0.23",
+            "@babel/core": "^7.18.9",
+            "@babel/runtime": "^7.18.9",
+            "@babel/preset-react": "^7.18.6",
+            "@babel/preset-env": "^7.18.9",
+            "@babel/preset-typescript": "^7.18.6",
+            "@babel/plugin-proposal-class-properties": "^7.18.6",
             "react": "18.2.0",
-            "react-dom": "18.2.0"
+            "react-dom": "18.2.0",
+            "react-native-web": "0.18.10",
+            "react-native": "0.70.5"
+          },
+          "peerDependencies": {
+            "@types/react-dom": "18.0.9",
+            "@types/react-native": "0.69.5",
+            "@types/react": "18.0.23",
+            "react": "18.2.0",
+            "react-dom": "18.2.0",
+            "react-native-web": "0.18.10",
+            "react-native": "0.70.5"
           },
           "devDependencies": {
-            "@types/react": "18.0.23",
             "@types/react-dom": "18.0.9",
-            "@types/react-native": "0.69.5"
+            "@types/react-native": "0.69.5",
+            "@types/react": "18.0.23",
+            "react": "18.2.0",
+            "react-dom": "18.2.0",
+            "react-native-web": "0.18.10",
+            "react-native": "0.70.5"
           }
         }
       }
