adding nx workspace

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@ public/
 
 # ESLint
 lint-results/
+
+# Expo
+node_modules/
+.expo/
+.yarn/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+cache/
+
