--- a/package.json
+++ b/package.json
@@ -1,7 +1,98 @@
 {
-  "name": "universal-nativewind-ui",
+  "name": "react-universal",
   "version": "1.0.0",
+  "private": true,
   "license": "MIT",
   "author": "Cristhian Gutierrez",
-  "main": "index.js"
+  "workspaces": [
+    "packages/*",
+    "apps/nextjs",
+    "apps/expo",
+    "apps/storybook-react"
+  ],
+  "scripts": {
+    "build": "nx exec -- tsc -p tsconfig.json",
+    "lint": "nx exec -- eslint . --ext .ts",
+    "test": "nx exec -- jest"
+  },
+  "dependencies": {
+    "@expo/metro-config": "0.5.2",
+    "@expo/webpack-config": "~0.17.3",
+    "expo": "47.0.9",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.5",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "1.0.0",
+    "react-native-web": "~0.18.10",
+    "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@expo/cli": "0.4.10",
+    "@nrwl/cypress": "15.6.2",
+    "@nrwl/detox": "15.6.2",
+    "@nrwl/eslint-plugin-nx": "15.6.2",
+    "@nrwl/expo": "15.6.2",
+    "@nrwl/jest": "15.6.2",
+    "@nrwl/linter": "15.6.2",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.6.2",
+    "@nrwl/rollup": "15.6.2",
+    "@nrwl/workspace": "15.6.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^6.1.2",
+    "@swc/core": "^1.2.173",
+    "@swc/helpers": "~0.4.11",
+    "@swc/jest": "0.2.20",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-native": "5.3.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/react-native": "11.5.0",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@types/react-native": "0.70.7",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "babel-preset-expo": "~9.2.2",
+    "cypress": "^12.2.0",
+    "detox": "20.0.3",
+    "eas-cli": "3.1.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "expo-cli": "6.0.8",
+    "jest": "28.1.1",
+    "jest-circus": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "metro-resolver": "0.73.3",
+    "nativewind": "^2.0.11",
+    "nx": "15.6.2",
+    "react-test-renderer": "18.2.0",
+    "swc-loader": "0.1.15",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "{projectRoot}/build"
+        ]
+      },
+      "test": {
+        "outputs": [
+          "{projectRoot}/coverage"
+        ]
+      }
+    }
+  }
 }
