--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nrwl/workspace": "15.6.2",
     "@rollup/plugin-url": "^7.0.0",
     "@svgr/rollup": "^6.1.2",
+    "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
     "@swc/helpers": "~0.4.11",
     "@swc/jest": "0.2.20",
@@ -52,7 +53,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/react-native": "11.5.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
