--- a/package.json
+++ b/package.json
@@ -5,24 +5,17 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "workspaces": [
-    "packages/*",
-    "apps/nextjs",
-    "apps/expo",
-    "apps/storybook-react"
+    "packages/**"
   ],
-  "scripts": {
-    "build": "nx exec -- tsc -p tsconfig.json",
-    "lint": "nx exec -- eslint . --ext .ts",
-    "test": "nx exec -- jest"
-  },
+  "scripts": {},
   "dependencies": {
     "@expo/metro-config": "0.5.2",
     "@expo/webpack-config": "~0.17.3",
     "expo": "47.0.9",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "1.0.0",
@@ -37,10 +30,12 @@
     "@nrwl/eslint-plugin-nx": "15.6.2",
     "@nrwl/expo": "15.6.2",
     "@nrwl/jest": "15.6.2",
+    "@nrwl/js": "15.6.2",
     "@nrwl/linter": "15.6.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.6.2",
     "@nrwl/rollup": "15.6.2",
+    "@nrwl/web": "^15.6.2",
     "@nrwl/workspace": "15.6.2",
     "@rollup/plugin-url": "^7.0.0",
     "@svgr/rollup": "^6.1.2",
@@ -53,12 +48,13 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/react-native": "11.5.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/node": "16.11.7",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "babel-jest": "28.1.1",
     "babel-preset-expo": "~9.2.2",
     "cypress": "^12.2.0",
     "detox": "20.0.3",
@@ -76,8 +72,10 @@
     "metro-resolver": "0.73.3",
     "nativewind": "^2.0.11",
     "nx": "15.6.2",
-    "react-test-renderer": "18.2.0",
+    "postcss": "^8.4.21",
+    "react-test-renderer": "18.1.0",
     "swc-loader": "0.1.15",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "^4.9.4"
