chore(git): commitizen
commitizen and conventional commits

--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
   "workspaces": [
     "packages/**"
   ],
-  "scripts": {},
+  "scripts": {
+    "commit": "cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@expo/metro-config": "0.5.2",
     "@expo/webpack-config": "~0.17.3",
@@ -56,7 +63,9 @@
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "babel-preset-expo": "~9.2.2",
+    "commitizen": "^4.3.0",
     "cypress": "^12.2.0",
+    "cz-conventional-changelog": "^3.3.0",
     "detox": "20.0.3",
     "eas-cli": "3.1.1",
     "eslint": "~8.15.0",
