--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "react-universal",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/react-universal/nativewind.git"
+  },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "workspaces": [
     "packages/**"
   ],
   "scripts": {
-    "commit": "cz"
+    "commit": "cz",
+    "semantic-release": "semantic-release"
   },
   "config": {
     "commitizen": {
@@ -83,6 +88,7 @@
     "nx": "15.6.2",
     "postcss": "^8.4.21",
     "react-test-renderer": "18.1.0",
+    "semantic-release": "^19.0.5",
     "swc-loader": "0.1.15",
     "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
