--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,17 +14,15 @@
       "@react-universal/nativewind.core": [
         "packages/core/nativewind.core/src/index.ts"
       ],
+      "@react-universal/nativewind.pressable": [
+        "packages/primitives/nativewind.pressable/src/index.ts"
+      ],
+      "@react-universal/nativewind.text": [
+        "packages/primitives/nativewind.text/src/index.ts"
+      ],
       "@react-universal/nativewind.view": [
         "packages/primitives/nativewind.view/src/index.ts"
       ]
     }
-  },
-  "exclude": [
-    "node_modules",
-    "tmp",
-    "**/dist/**",
-    "**/.expo/**/*",
-    "dist",
-    "**/.next/**/*"
-  ]
+  }
 }
