--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@expo/metro-config": "0.5.2",
     "@expo/webpack-config": "~0.17.3",
     "expo": "47.0.9",
+    "expo-module-scripts": "^3.0.4",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -39,6 +40,7 @@
     "@expo/cli": "0.4.10",
     "@nrwl/cypress": "15.6.2",
     "@nrwl/detox": "15.6.2",
+    "@nrwl/devkit": "15.6.2",
     "@nrwl/eslint-plugin-nx": "15.6.2",
     "@nrwl/expo": "15.6.2",
     "@nrwl/jest": "15.6.2",
@@ -60,7 +62,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/react-native": "11.5.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "latest",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
