--- a/packages/core/nativewind.core/tsconfig.json
+++ b/packages/core/nativewind.core/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react-native",
+    "baseUrl": ".",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
