--- a/packages/primitives/nativewind.view/tsconfig.json
+++ b/packages/primitives/nativewind.view/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react-native",
     "allowJs": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
