--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nrwl/js": "15.6.2",
     "@nrwl/linter": "15.6.2",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-plugin": "^15.6.2",
     "@nrwl/react": "15.6.2",
     "@nrwl/rollup": "15.6.2",
     "@nrwl/web": "^15.6.2",
