feat(generators): expo-lib nx generator

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,11 @@
         "jest": true
       },
       "rules": {}
+    },
+    {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
     }
   ]
 }
