--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "rootDir": ".",
     "paths": {
       "@react-universal/nativewind.core": [
         "packages/core/nativewind.core/src/index.ts"
@@ -22,9 +23,6 @@
       ],
       "@react-universal/nativewind.view": [
         "packages/primitives/nativewind.view/src/index.ts"
-      ],
-      "@react-universal/nx-expo-library": [
-        "packages/nx/expo-library/src/index.ts"
       ]
     }
   }
