--- a/packages/expo-module/package.json
+++ b/packages/expo-module/package.json
@@ -2,6 +2,9 @@
     "name": "@react-universal/expo-module",
     "version": "0.0.1",
     "main": "src/index.js",
-    "generators": "./generators.json",
-    "executors": "./executors.json"
+    "devDependencies": {
+        "expo-module-scripts": "^3.0.4"
+    },
+    "executors": "./executors.json",
+    "generators": "./generators.json"
 }
