--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@testing-library/jest-native": "5.3.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-native": "11.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.26",
@@ -85,6 +86,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "expo-cli": "6.0.8",
@@ -96,12 +98,14 @@
     "nativewind": "^2.0.11",
     "nx": "15.6.2",
     "postcss": "^8.4.21",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "0.1.10",
     "react-test-renderer": "18.1.0",
     "semantic-release": "^19.0.5",
     "swc-loader": "0.1.15",
     "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.8.4"
   }
 }
