--- a/packages/primitives/nativewind.view/project.json
+++ b/packages/primitives/nativewind.view/project.json
@@ -3,24 +3,17 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/primitives/nativewind.view/src",
   "projectType": "library",
-  "tags": [
-    "primitives"
-  ],
+  "tags": ["primitives"],
   "targets": {
     "build": {
       "executor": "@nrwl/web:rollup",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/primitives/nativewind.view",
         "tsConfig": "packages/primitives/nativewind.view/tsconfig.lib.json",
         "project": "packages/primitives/nativewind.view/package.json",
         "entryFile": "packages/primitives/nativewind.view/src/index.ts",
-        "external": [
-          "react/jsx-runtime",
-          "react-native"
-        ],
+        "external": ["react/jsx-runtime", "react-native"],
         "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
         "assets": [
           {
@@ -33,20 +26,15 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/primitives/nativewind.view/**/*.{ts,tsx,js,jsx}"
-        ]
+        "fix": true,
+        "lintFilePatterns": ["packages/primitives/nativewind.view/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "packages/primitives/nativewind.view/jest.config.ts",
         "passWithNoTests": true
