--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "workspaces": [
-    "packages/**"
+    "packages/**",
+    "!(packages/expo-module)"
   ],
   "scripts": {
     "commit": "cz",
+    "create-module": "NODE_OPTIONS=\"-r ts-node/register\" yarn exec nx generate @react-universal/expo-module:expo-module -- --no-interactive --dry-run  --verbose --local",
     "semantic-release": "semantic-release"
   },
   "config": {
@@ -106,6 +108,6 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
