--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "commit": "cz",
-    "create-module": "NODE_OPTIONS=\"-r ts-node/register\" yarn exec nx generate @react-universal/expo-module:expo-module -- --no-interactive --dry-run  --verbose --local",
+    "create-module": "NODE_OPTIONS=\"-r ts-node/register\" nx generate @react-universal/expo-module:expo-module --no-interactive --dry-run  --verbose --local --name --",
     "semantic-release": "semantic-release"
   },
   "config": {
@@ -109,5 +109,6 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "^4.9.4"
-  }
+  },
+  "packageManager": "yarn@3.3.1"
 }
