--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,10 +18,7 @@
     "rootDir": ".",
     "paths": {
       "@react-universal/expo-module": ["packages/expo-module/src/index.ts"],
-      "@react-universal/nativewind.core": ["packages/core/nativewind.core/src/index.ts"],
-      "@react-universal/nativewind.pressable": [
-        "packages/primitives/nativewind.pressable/src/index.ts"
-      ]
+      "@react-universal/nativewind.core": ["packages/core/nativewind.core/src/index.ts"]
     }
   },
   "exclude": ["tmp", "node_modules"]
