--- a/packages/core/nativewind.core/project.json
+++ b/packages/core/nativewind.core/project.json
@@ -3,25 +3,17 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/core/nativewind.core/src",
   "projectType": "library",
-  "tags": [
-    "core"
-  ],
+  "tags": ["core"],
   "targets": {
     "build": {
       "executor": "@nrwl/web:rollup",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/core/nativewind.core",
         "tsConfig": "packages/core/nativewind.core/tsconfig.lib.json",
         "project": "packages/core/nativewind.core/package.json",
         "entryFile": "packages/core/nativewind.core/src/index.ts",
-        "external": [
-          "react/jsx-runtime",
-          "react-native",
-          "tailwindcss"
-        ],
+        "external": ["react/jsx-runtime", "react-native", "tailwindcss"],
         "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
         "assets": [
           {
@@ -34,20 +26,14 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/core/nativewind.core/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["packages/core/nativewind.core/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "packages/core/nativewind.core/jest.config.ts",
         "passWithNoTests": true
