--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jsonc-eslint-parser": "^2.1.0",
+    "lerna": "^4.0.0",
     "metro-resolver": "0.73.3",
     "nativewind": "^2.0.11",
     "nx": "15.6.2",
