--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
+npmScopes:
+  react-universal:
+    npmRegistryServer: https://npm.pkg.github.com
+    npmAlwaysAuth: true
+    npmAuthToken: ${NPM_TOKEN}
+
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-3.3.1.cjs
