--- a/.gitignore
+++ b/.gitignore
@@ -22,17 +22,4 @@ public/
 # ESLint
 lint-results/
 
-# Expo
-node_modules/
-.expo/
-.yarn/
-dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-cache/
+**build/
