--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,30 +1,29 @@
 {
+  "extends": "expo-module-scripts/tsconfig.base",
   "compileOnSave": false,
   "compilerOptions": {
+    "target": "esnext",
+    "lib": ["dom", "esnext"],
+    "jsx": "react",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "sourceMap": true,
-    "moduleResolution": "Node",
-    "target": "ESNext",
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": true,
+    "strictPropertyInitialization": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "types": ["jest", "jest-require"],
+    "module": "esnext",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
     "strict": true,
     "strictNullChecks": true,
-    "module": "ESNext",
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@react-universal/nativewind.core": [
-        "packages/core/nativewind.core/src/index.ts"
-      ],
-      "@react-universal/nativewind.view": [
-        "packages/primitives/nativewind.view/src/index.ts"
-      ]
-    }
+    "skipDefaultLibCheck": true
   },
-  "exclude": [
-    "node_modules",
-    "tmp",
-    "**/dist/**",
-    "**/.expo/**/*",
-    "dist",
-    "**/.next/**/*"
-  ]
+  "exclude": ["tmp", "node_modules"]
 }
