adding example projects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "editor.background": "#070606",
         "tab.inactiveBackground": "#161414",
       }
-    }
+    },
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
