--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "examples/*"
   ],
   "scripts": {
     "commit": "cz",
+    "dev": "turbo run dev",
     "semantic-release": "semantic-release"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~5.0.0",
+    "@expo/prebuild-config": "~5.0.0",
+    "@types/react": "18.0.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native-web": "0.18.10"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
@@ -39,6 +49,7 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "semantic-release": "^19.0.5",
     "tslib": "^2.3.0",
+    "turbo": "^1.7.0",
     "typescript": "^4.9.4"
   },
   "packageManager": "yarn@3.3.1"
