--- a/packages/nativewind-primitives/tsconfig.json
+++ b/packages/nativewind-primitives/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "expo-module-scripts/tsconfig.base",
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "outDir": "./build",
     "jsx": "react-jsx",
