--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,18 +4,18 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["dom", "esnext"],
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": true,
+    "importsNotUsedAsValues": "error",
     "declarationMap": true,
     "inlineSources": true,
     "strictPropertyInitialization": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
-    "types": ["jest", "jest-require"],
     "module": "esnext",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
