--- a/packages/nativewind-utils/package.json
+++ b/packages/nativewind-utils/package.json
@@ -13,8 +13,8 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./build/cjs/index.js",
+  "types": "./build/types/index.d.ts",
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
@@ -37,7 +37,7 @@
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
     "expo-module-scripts": "^3.0.4",
-    "nativewind": "^2.0.11",
+    "nativewind": "next",
     "postcss": "^8.4.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
