--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
     "expo-module-scripts": "^3.0.4",
-    "nativewind": "^2.0.11",
+    "nativewind": "next",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
