--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -14,6 +14,12 @@
     "@react-universal/nativewind-utils": "*",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
-    "next": "13.1.4"
+    "nativewind": "next",
+    "next": "13.1.4",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "next-compose-plugins": "^2.2.1"
   }
 }
