--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "commit": "cz",
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --parallel",
     "semantic-release": "semantic-release"
   },
   "config": {
