--- a/packages/nativewind-primitives/tsconfig.json
+++ b/packages/nativewind-primitives/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build",
+    "outDir": "./build/esm",
+    "allowSyntheticDefaultImports": true,
+    "declarationDir": "./build/types",
+    "lib": ["ES5", "ES2015", "ES2016", "DOM", "ESNext"],
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
     "jsx": "react-jsx",
+    "module": "ES6",
     "importHelpers": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
