--- a/packages/nativewind-primitives/package.json
+++ b/packages/nativewind-primitives/package.json
@@ -13,14 +13,24 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/cjs/index.js",
-  "module": "./build/esm/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/index.es.js",
+      "require": "./build/index.umd.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "./build/index.umd.js",
+  "module": "./build/index.es.js",
+  "types": "./src/index.ts",
   "scripts": {
     "build": "yarn build:esm",
     "build:cjs": "expo-module build --module CommonJS",
     "build:esm": "expo-module build",
+    "build:vite": "yarn vite build",
     "clean": "expo-module clean",
-    "dev": "expo-module build --watch",
+    "dev:lib": "expo-module build --watch",
     "expo-module": "expo-module",
     "prepare": "expo-module prepare",
     "prepublishOnly": "expo-module prepublishOnly",
@@ -50,6 +60,8 @@
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "~0.18.10",
     "tailwindcss": "^3.2.4",
-    "tslib": "^2.3.0"
-  }
+    "tslib": "^2.3.0",
+    "vite": "^4.0.4"
+  },
+  "react-native": "./src/index.ts"
 }
