--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-native-web": "0.18.10"
   },
   "devDependencies": {
+    "@swc/plugin-styled-components": "^1.5.40",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-react-swc": "^3.1.0-beta.2",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.15.0",
@@ -49,8 +51,9 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "semantic-release": "^19.0.5",
     "tslib": "^2.3.0",
-    "turbo": "^1.7.0",
-    "typescript": "^4.9.4"
+    "turbo": "^1.7.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4"
   },
   "packageManager": "yarn@3.3.1"
 }
