--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.4"
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "dependencies": {
+    "@changesets/cli": "^2.26.0"
+  }
 }
