--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": "@changesets/cli/changelog-github",
   "commit": false,
-  "fixed": [["@react-universal/nativewind-primitives"], ["@react-universal/nativewind-utils"]],
+  "fixed": [],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
