--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -10,8 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-universal/nativewind-primitives": "*",
-    "@react-universal/nativewind-utils": "*",
+    "@react-universal/core": "*",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.2.0",
