--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@react-universal/nativewind-primitives",
+  "name": "@react-universal/core",
   "version": "0.0.3",
+  "description": "Core package that contains common utils, primitives and SWC compatibility layer",
   "homepage": "https://github.com/react-universal/nativewind-ui#readme",
   "bugs": {
     "url": "https://github.com/react-universal/nativewind-ui/issues"
@@ -8,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/react-universal/nativewind-ui.git",
-    "directory": "packages/nativewind-ui"
+    "directory": "packages/core"
   },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
@@ -25,12 +26,11 @@
   "module": "./build/index.es.js",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "yarn build:esm",
+    "build": "yarn vite build",
     "build:cjs": "expo-module build --module CommonJS",
     "build:esm": "expo-module build",
-    "build:vite": "yarn vite build",
     "clean": "expo-module clean",
-    "dev:lib": "expo-module build --watch",
+    "dev": "yarn vite build -w --force -d",
     "expo-module": "expo-module",
     "prepare": "expo-module prepare",
     "prepublishOnly": "expo-module prepublishOnly",
@@ -42,15 +42,18 @@
     }
   },
   "dependencies": {
-    "@react-universal/nativewind-utils": "*",
-    "class-variance-authority": "0.4.0"
+    "class-variance-authority": "0.4.0",
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
+    "@tamagui/react-native-svg": "^1.2.2",
+    "@tamagui/vite-plugin": "^1.2.2",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
     "expo-module-scripts": "^3.0.4",
     "nativewind": "next",
+    "next": "13.1.4",
     "postcss": "^8.4.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -58,10 +61,13 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "1.0.0",
-    "react-native-web": "~0.18.10",
+    "react-native-web-lite": "^1.2.2",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.0.4"
+  },
+  "peerDependencies": {
+    "next": ">= 13.0.0"
   },
   "react-native": "./src/index.ts"
 }
