--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,62 +9,27 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/react-universal/nativewind-ui.git",
-    "directory": "packages/core"
+    "directory": "packages/tailwind-plugin"
   },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./build/index.es.js",
-      "require": "./build/index.umd.js"
-    },
-    "./package.json": "./package.json"
-  },
-  "main": "./build/index.umd.js",
-  "module": "./build/index.es.js",
+  "main": "./build/index.js",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "yarn vite build",
-    "build:cjs": "expo-module build --module CommonJS",
-    "build:esm": "expo-module build",
-    "clean": "expo-module clean",
-    "dev": "yarn vite build -w --force -d",
-    "expo-module": "expo-module",
-    "prepare": "expo-module prepare",
-    "prepublishOnly": "expo-module prepublishOnly",
-    "test": "expo-module test"
+    "build": "tsc",
+    "dev": "tsc -w"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "class-variance-authority": "0.4.0",
-    "clsx": "^1.2.1"
-  },
   "devDependencies": {
-    "@tamagui/react-native-svg": "^1.2.2",
-    "@tamagui/vite-plugin": "^1.2.2",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@types/react-native": "0.70.7",
     "expo-module-scripts": "^3.0.4",
-    "nativewind": "next",
-    "next": "13.1.4",
     "postcss": "^8.4.21",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-svg": "13.4.0",
-    "react-native-svg-transformer": "1.0.0",
-    "react-native-web-lite": "^1.2.2",
     "tailwindcss": "^3.2.4",
-    "tslib": "^2.3.0",
-    "vite": "^4.0.4"
+    "tslib": "^2.3.0"
   },
   "peerDependencies": {
     "next": ">= 13.0.0"
