--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,27 @@
       "persistent": true,
       "cache": false
     },
+    "expo:start": {
+      "outputs": [
+        ".expo/**"
+      ],
+      "persistent": true,
+      "cache": false
+    },
+    "ios": {
+      "outputs": [
+        ".expo/**"
+      ],
+      "persistent": true,
+      "cache": false
+    },
+    "android": {
+      "outputs": [
+        ".expo/**"
+      ],
+      "persistent": true,
+      "cache": false
+    },
     "lint": {
       "outputs": [
         "dist/**",
