--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "scripts": {
     "commit": "cz",
     "dev": "turbo run dev --filter=\"@react-universal/**\" --parallel",
-    "expo:android": "turbo run android --filter expo-app",
-    "expo:ios": "turbo run ios --filter expo-app",
-    "expo:start": "turbo run expo:start --filter expo-app",
+    "expo:android": "yarn workspace expo-app android",
+    "expo:ios": "yarn workspace expo-app ios",
+    "expo:start": "yarn workspace expo-app start",
     "semantic-release": "semantic-release",
     "web": "turbo run dev --filter next-app"
   },
@@ -60,7 +60,8 @@
     "tslib": "^2.3.0",
     "turbo": "^1.7.2",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "vite": "^4.1.1",
+    "vitest": "^0.28.3"
   },
   "packageManager": "yarn@3.3.1"
 }
