--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,21 +18,36 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
   },
-  "devDependencies": {
-    "expo-module-scripts": "^3.0.4",
+  "dependencies": {
+    "@twind/core": "^1.1.3",
+    "@twind/preset-autoprefix": "^1.0.7",
+    "@twind/preset-tailwind": "^1.1.4",
+    "@twind/typescript-plugin": "^0.3.5",
+    "css-to-react-native-transform": "^2.0.0",
+    "immer": "^9.0.19",
     "postcss": "^8.4.21",
+    "postcss-js": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/postcss-js": "^4.0.0",
+    "@vitest/ui": "^0.28.3",
     "tailwindcss": "^3.2.4",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vite": "^4.1.1",
+    "vitest": "^0.28.3"
   },
   "peerDependencies": {
-    "next": ">= 13.0.0"
+    "tailwindcss": ">= 3.0.0"
   },
   "react-native": "./src/index.ts"
 }
