--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -27,13 +27,7 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "yarn vite build",
-    "build:cjs": "expo-module build --module CommonJS",
-    "build:esm": "expo-module build",
-    "clean": "expo-module clean",
     "dev": "yarn vite build -w --force -d",
-    "expo-module": "expo-module",
-    "prepare": "expo-module prepare",
-    "prepublishOnly": "expo-module prepublishOnly",
     "test": "expo-module test"
   },
   "config": {
@@ -46,10 +40,10 @@
     "clsx": "^1.2.1"
   },
   "devDependencies": {
+    "@react-universal/core": "*",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
-    "expo-module-scripts": "^3.0.4",
     "next": "13.1.4",
     "postcss": "^8.4.21",
     "react": "18.1.0",
@@ -61,7 +55,7 @@
     "react-native-web-lite": "^1.2.2",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
-    "vite": "^4.0.4"
+    "vite": "^4.1.1"
   },
   "peerDependencies": {
     "next": ">= 13.0.0"
