--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,5 +24,6 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
+  "include": ["types.d.ts"],
   "exclude": ["tmp", "node_modules"]
 }
