--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,11 +34,13 @@
     "@twind/preset-tailwind": "^1.1.4",
     "@twind/typescript-plugin": "^0.3.5",
     "css-to-react-native-transform": "^2.0.0",
+    "css-tree": "^2.3.1",
     "immer": "^9.0.19",
     "postcss": "^8.4.21",
     "postcss-js": "^4.0.0"
   },
   "devDependencies": {
+    "@types/css-tree": "^2.0.1",
     "@types/postcss-js": "^4.0.0",
     "@vitest/ui": "^0.28.3",
     "tailwindcss": "^3.2.4",
