--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "android": "expo start --android",
-    "ios": "expo start --ios -c",
+    "ios": "npx expo start --ios -c",
     "start": "expo start",
     "web": "expo start --web"
   },
