--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,17 +29,22 @@
     }
   },
   "dependencies": {
+    "@dhmk/zustand-lens": "^2.0.5",
     "@twind/core": "^1.1.3",
     "@twind/preset-autoprefix": "^1.0.7",
     "@twind/preset-tailwind": "^1.1.4",
     "@twind/typescript-plugin": "^0.3.5",
+    "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
     "css-tree": "^2.3.1",
     "immer": "^9.0.19",
     "postcss": "^8.4.21",
-    "postcss-js": "^4.0.0"
+    "postcss-js": "^4.0.0",
+    "twrnc": "^3.6.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/css-to-react-native": "^3.0.0",
     "@types/css-tree": "^2.0.1",
     "@types/postcss-js": "^4.0.0",
     "@vitest/ui": "^0.28.3",
@@ -51,5 +56,5 @@
   "peerDependencies": {
     "tailwindcss": ">= 3.0.0"
   },
-  "react-native": "./src/index.ts"
+  "react-native": "./source/index.ts"
 }
