--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/react-universal/nativewind-ui.git",
-    "directory": "packages/tailwind-plugin"
+    "directory": "packages/core"
   },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
@@ -40,14 +40,19 @@
     "immer": "^9.0.19",
     "postcss": "^8.4.21",
     "postcss-js": "^4.0.0",
-    "twrnc": "^3.6.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/css-to-react-native": "^3.0.0",
     "@types/css-tree": "^2.0.1",
+    "@types/postcss-css-variables": "^0.18.0",
     "@types/postcss-js": "^4.0.0",
     "@vitest/ui": "^0.28.3",
+    "postcss-calc": "^8.2.4",
+    "postcss-color-functional-notation": "^5.0.2",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-nested": "^6.0.0",
+    "stylis": "^4.1.3",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1",
