--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -37,12 +37,15 @@
   },
   "dependencies": {
     "class-variance-authority": "0.4.0",
-    "clsx": "^1.2.1"
+    "clsx": "^1.2.1",
+    "react-is": "18.2.0"
   },
   "devDependencies": {
     "@react-universal/core": "*",
+    "@react-universal/styled": "*",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-is": "^17.0.3",
     "@types/react-native": "0.70.7",
     "next": "13.1.4",
     "postcss": "^8.4.21",
