--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
     "immer": "^9.0.19",
     "postcss": "^8.4.21",
     "postcss-js": "^4.0.0",
+    "use-sync-external-store": "^1.2.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
