--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -27,7 +27,7 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "yarn vite build",
-    "dev": "yarn vite build -w --force -d",
+    "dev": "yarn vite build -w --force",
     "test": "expo-module test"
   },
   "config": {
@@ -48,14 +48,12 @@
     "@types/react-is": "^17.0.3",
     "@types/react-native": "0.70.7",
     "next": "13.1.4",
-    "postcss": "^8.4.21",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.70.5",
     "react-native-reanimated": "~2.12.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "1.0.0",
-    "react-native-web-lite": "^1.2.2",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
