--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
     "postcss-js": "^4.0.0"
   },
   "devDependencies": {
+    "@mhsdesign/jit-browser-tailwindcss": "^0.2.2",
     "@types/css-to-react-native": "^3.0.0",
     "@types/css-tree": "^2.0.1",
     "@types/postcss-css-variables": "^0.18.0",
