--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "18.2.0",
     "react-devtools-core": "~4.25.0",
     "react-dom": "18.2.0",
-    "react-native-web": "0.18.10"
+    "react-native-web": "0.18.10",
+    "@mhsdesign/jit-browser-tailwindcss@^0.2.2": "patch:@mhsdesign/jit-browser-tailwindcss@npm%3A0.2.2#./.yarn/patches/@mhsdesign-jit-browser-tailwindcss-npm-0.2.2-aa94066e89.patch"
   },
   "dependencies": {
     "@changesets/cli": "^2.26.0"
