--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,13 +2,13 @@
   "name": "@react-universal/core",
   "version": "0.0.3",
   "description": "Core package that contains common utils, primitives and SWC compatibility layer",
-  "homepage": "https://github.com/react-universal/nativewind-ui#readme",
+  "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
-    "url": "https://github.com/react-universal/nativewind-ui/issues"
+    "url": "https://github.com/react-universal/tailwind/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-universal/nativewind-ui.git",
+    "url": "git+https://github.com/react-universal/tailwind.git",
     "directory": "packages/core"
   },
   "license": "MIT",
@@ -29,16 +29,15 @@
     }
   },
   "dependencies": {
-    "@twind/core": "^1.1.3",
-    "@twind/preset-tailwind": "^1.1.4",
-    "@twind/typescript-plugin": "^0.3.5",
+    "@react-universal/tailwind": "*",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
     "immer": "^9.0.19",
-    "postcss-js": "^4.0.0"
+    "postcss-js": "^4.0.0",
+    "postcss-rem-to-pixel": "^4.1.2",
+    "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
-    "@mhsdesign/jit-browser-tailwindcss": "^0.2.2",
     "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/css-to-react-native": "^3.0.0",
     "@types/css-tree": "^2.0.1",
@@ -47,6 +46,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-native": "0.70.7",
+    "@types/use-sync-external-store": "^0.0.3",
     "@vitest/ui": "^0.28.3",
     "postcss": "^8.4.21",
     "postcss-css-variables": "^0.18.0",
