--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -30,6 +30,7 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "yarn vite build",
+    "prepare": "yarn build",
     "test:ui": "vitest --ui"
   },
   "config": {
