--- a/packages/tailwind/tsconfig.json
+++ b/packages/tailwind/tsconfig.json
@@ -1,6 +1,9 @@
 {
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "importsNotUsedAsValues": "error",
+    "noImplicitAny": false,
     "lib": ["dom", "esnext", "dom.iterable"],
     "module": "esnext",
     "moduleResolution": "node",
@@ -8,5 +11,6 @@
     "strict": true,
     "stripInternal": true,
     "target": "esnext"
-  }
+  },
+  "include": ["src", "types.d.ts", "index.d.ts"]
 }
