--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/tailwind",
-  "version": "0.0.9",
+  "version": "0.0.3",
   "description": "Tailwindcss Inline CSS",
   "keywords": [
     "tailwind",
@@ -30,6 +30,7 @@
   "types": "./src/index.ts",
   "scripts": {
     "build": "yarn vite build",
+    "prepare": "yarn build",
     "test:ui": "vitest --ui"
   },
   "config": {
