--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "@react-universal/tailwind": "*",
+    "@react-universal/tailwind": "^0.0.1",
     "css-to-react-native": "^3.1.0",
     "css-to-react-native-transform": "^2.0.0",
     "immer": "^9.0.19",
