--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
+npmScopes:
+  react-universal:
+    npmRegistryServer: https://npm.pkg.github.com
+    npmAlwaysAuth: true
+    npmAuthToken: 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
+
 nodeLinker: node-modules
 
 plugins:
