--- a/package.json
+++ b/package.json
@@ -70,5 +70,9 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
   "packageManager": "yarn@3.3.1"
 }
