--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-universal/primitives",
-  "version": "0.0.6",
+  "version": "0.0.7-alpha.0",
   "description": "",
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
@@ -43,8 +43,8 @@
   },
   "devDependencies": {
     "@expo/html-elements": "^0.3.1",
-    "@react-universal/core": "^0.0.6",
-    "@react-universal/styled": "^0.0.6",
+    "@react-universal/core": "^0.0.7-alpha.0",
+    "@react-universal/styled": "^0.0.7-alpha.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/react-is": "^17.0.3",
